--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   "dependencies": {
     "@fontsource-variable/inter": "5.0.20",
     "@fontsource/anton": "5.0.20",
-    "@mantine/core": "7.11.2",
-    "@mantine/hooks": "7.11.2",
+    "@mantine/core": "7.12.1",
+    "@mantine/form": "7.12.1",
+    "@mantine/hooks": "7.12.1",
+    "@mantine/notifications": "7.12.1",
+    "firebase": "10.12.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-helmet": "6.1.0",
     "react-icons": "5.2.1",
-    "react-router-dom": "6.25.1"
+    "react-router-dom": "6.25.1",
+    "zustand": "4.5.4"
   },
   "devDependencies": {
     "@types/node": "22.0.2",
