--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "@mantine/form": "7.12.1",
     "@mantine/hooks": "7.12.1",
     "@mantine/notifications": "7.12.1",
+    "chroma-js": "2.6.1-0",
     "firebase": "10.12.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-geocode": "1.0.0-alpha.1",
     "react-helmet": "6.1.0",
+    "react-hook-geolocation": "1.1.0",
     "react-icons": "5.2.1",
     "react-router-dom": "6.25.1",
     "zustand": "4.5.4"
   },
   "devDependencies": {
+    "@types/chroma-js": "2.4.4",
     "@types/node": "22.0.2",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
